--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,8 @@ Lection_02/.vs/BullCowGame/v15/.suo
 Lection_02/.vs/BullCowGame/v15/Browse.VC.db
 Lection_02/.vs/BullCowGame/v15/Browse.VC.opendb
 Lection_02/.vs/BullCowGame/v15/ipch/6235ad209137e81b.ipch
+Lection_02/.vs/*
+Lection_02/BullCowGame/Debug/*
+Lection_02/Debug/BullCowGame.exe
+Lection_02/Debug/BullCowGame.ilk
+Lection_02/Debug/BullCowGame.pdb
