added some more gitignores

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ Lection_02/BullCowGame/Debug/*
 Lection_02/Debug/BullCowGame.exe
 Lection_02/Debug/BullCowGame.ilk
 Lection_02/Debug/BullCowGame.pdb
+Lection_02/BullCowGame/x64/Debug/*
+Lection_02/x64/Debug/BullCowGame.exe
+Lection_02/x64/Debug/BullCowGame.ilk
+Lection_02/x64/Debug/BullCowGame.pdb
