--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,8 @@ Lection_02/BullCowGame/x64/Debug/*
 Lection_02/x64/Debug/BullCowGame.exe
 Lection_02/x64/Debug/BullCowGame.ilk
 Lection_02/x64/Debug/BullCowGame.pdb
+Lection_03/RoomEscape/Binaries/*
+Lection_03/RoomEscape/Build/*
+Lection_03/RoomEscape/Intermediate/*
+Lection_03/RoomEscape/Saved/*
+Lection_03/RoomEscape/RoomEscape.VC.db
